Auth / Temporary workaround for OIDC user profile.